--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,17 @@
 {
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
-  "rules": {
-    "indent": ["error", 4],
-    "no-console": "off",
-    "prettier/prettier": "error"
-  },
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "parserOptions": {
-    "ecmaVersion": 12,
-    "sourceType": "module"
-  }
+    "env": {
+        "browser": true,
+        "es6": true,
+        "node": true
+    },
+    "extends": ["airbnb", "plugin:prettier/recommended"],
+    "parserOptions": {
+        "ecmaVersion": 2020,
+        "sourceType": "module"
+    },
+    "plugins": ["prettier"],
+    "rules": {
+        "no-console": "off",
+        "indent": ["error", 4]
+    }
 }
