--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "uuid": "^11.0.3"
   }
 }
