--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.1",
+        "express-rate-limit": "^7.5.0",
         "express-session": "^1.18.1",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.11.3",
