--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "prettier": "^3.3.3"
     },
     "dependencies": {
+        "aws-sdk": "^2.1692.0",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
@@ -27,6 +28,7 @@
         "express": "^4.21.1",
         "express-rate-limit": "^7.5.0",
         "express-session": "^1.18.1",
+        "jsonwebtoken": "^9.0.2",
         "multer": "^1.4.5-lts.1",
         "mysql2": "^3.11.3",
         "uuid": "^11.0.3"
