--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
               uses: actions/checkout@v3
 
             - name: AWS 로그인
-              run:
+              run: |
                   aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY }}
                   aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_KEY }}
                   aws configure set default.region ap-northeast-2
