--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,28 +8,45 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.13"
-fastapi = "^0.115.0" 
-uvicorn = {extras = ["standard"], version = "^0.32.0"} 
-sqlalchemy = "^2.0.35" 
-pymysql = "^1.1.1" 
-pydantic = "^2.9.0" 
-python-jose = {extras = ["cryptography"], version = "^3.3.0"} 
-passlib = {extras = ["bcrypt"], version = "^1.7.4"} 
+fastapi = "^0.115.0"
+uvicorn = {extras = ["standard"], version = "^0.32.0"}
+sqlalchemy = "^2.0.35"
+pymysql = "^1.1.1"
+pydantic = "^2.9.0"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.12"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.0" 
-pytest-asyncio = "^0.24.0" 
-black = "^24.10.0" 
-isort = "^5.13.2" 
+pytest = "^8.3.0"
+pytest-asyncio = "^0.24.0"
+pre-commit = "^4.2.0"
+ruff = "^0.11.12"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"] 
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.black]
+[tool.ruff]
+target-version = "py313"
 line-length = 88
-target-version = ['py313'] 
+select = [
+    "E",
+    "W",
+    "F",
+    "I",
+    "C",
+    "B",
+]
+ignore = [
+    "E501",  # line too long (handled by formatter)
+]
 
-[tool.isort]
-profile = "black"
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
+[tool.ruff.lint.isort]
+known-first-party = ["src"]
