--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ pydantic = "^2.9.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.12"
+pydantic-settings = "^2.9.1"
+aiosqlite = "^0.21.0"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
