chore: .gitignore에 pycache와 추가 환경 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,14 @@ media/
 static/uploads/
 
 # Environment variables
+.env
 .env.local
 *.local
 
 # Temporary files
 tmp/
 temp/
+
+# pycache
+__pycache__/
+*.pyc
