--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ select = [
 ]
 ignore = [
     "E501",  # line too long (handled by formatter)
+    "E402",  # module level import not at top of file (handled by formatter)
 ]
 
 [tool.ruff.format]
