--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,13 @@ pytest = "^8.3.0"
 pytest-asyncio = "^0.24.0"
 pre-commit = "^4.2.0"
 ruff = "^0.11.12"
+httpx = "^0.28.1"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+addopts = "-v"
+testpaths = ["tests"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
