--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest-asyncio = "^0.24.0"
 pre-commit = "^4.2.0"
 ruff = "^0.11.12"
 httpx = "^0.28.1"
+pyrefly = "^0.19.0"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
