--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.ruff]
 target-version = "py313"
 line-length = 88
-select = [
+lint.select = [
     "E",
     "W",
     "F",
@@ -48,7 +48,7 @@ select = [
     "C",
     "B",
 ]
-ignore = [
+lint.ignore = [
     "E501",  # line too long (handled by formatter)
     "E402",  # module level import not at top of file (handled by formatter)
 ]
