--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,13 @@ fastapi = "^0.115.0"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 sqlalchemy = "^2.0.35"
 pymysql = "^1.1.1"
-pydantic = "^2.9.0"
+pydantic = {extras = ["email"], version = "^2.11.5"}
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.12"
 pydantic-settings = "^2.9.1"
 aiosqlite = "^0.21.0"
+pytest-mock = "^3.14.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
