--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ uvicorn = {extras = ["standard"], version = "^0.32.0"}
 sqlalchemy = "^2.0.35"
 pymysql = "^1.1.1"
 pydantic = {extras = ["email"], version = "^2.11.5"}
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-jose = {extras = ["cryptography"], version = "^3.5.0"}
 python-multipart = "^0.0.12"
 pydantic-settings = "^2.9.1"
 aiosqlite = "^0.21.0"
-pytest-mock = "^3.14.1"
+passlib = {version = ">=1.7.4", extras = ["bcrypt"]}
+bcrypt = "4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.0"
@@ -27,6 +27,7 @@ pre-commit = "^4.2.0"
 ruff = "^0.11.12"
 httpx = "^0.28.1"
 pyrefly = "^0.19.0"
+pytest-mock = "^3.14.1"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
